fixed: z-index reviews

--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -103,3 +103,4 @@
       font-size: 12px
       line-height: 160%
       text-align: justify
+      z-index: 50
